# TraceGPT

./: LICENSE  README.md  pyproject.toml  requirements.txt
blog/: 2026-04-30-how-to-understand-a-transformer.md  launch-posts.md
bugs/001_softmax_wrong_axis/: README.md  correct.py  test_001.py  wrong.py
bugs/002_causal_mask_reversed/: README.md  correct.py  test_002.py  wrong.py
bugs/003_missing_sqrt_dk/: README.md  correct.py  test_003.py  wrong.py
bugs/004_wrong_qk_transpose/: README.md  correct.py  test_004.py  wrong.py
bugs/005_label_shift_bug/: README.md  correct.py  test_005.py  wrong.py
bugs/006_weight_tying_transpose/: README.md  correct.py  test_006.py  wrong.py
bugs/007_generation_no_stop/: README.md  correct.py  test_007.py  wrong.py
demo/: index.html  poster.txt  screenshots.txt
levels/: level0_next_token.py  level1_causal_attention.py  level2_transformer_block.py  level3_positional_encoding.py  level4_multihead_gpt.py  level5_full_gpt.py  level6_showcase.py
paper/: README.md
reports/: .gitkeep  level0_next_token.md  level1_causal_attention.md  level2_transformer_block.md  level3_positional_encoding.md  level4_multihead_gpt.md  level5_forward_pass.md  level5_generation.md  level6_showcase.md
tests/: __init__.py  test_core.py  test_v02.py  test_v03.py
tracegpt/: __init__.py  model.py  ops.py  report.py  tracer.py  utils.py  viz.py
